fixed spacing of bottomSection

--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,7 @@ justify-content: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 10%;
 }
 
 .bottomImg img{
